github page & jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,21 @@
-name:xiuc
-markdown:kramdown
-permalink: /blog/:year/:month/:day/:title
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: xiuc
+email: 972994718@qq.com
+description: > 紫川之神-紫川秀# this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://froest2012.github.io" # the base hostname & protocol for your site
+twitter_username: xiuc
+github_username:  froest2012
+
+# Build settings
+markdown: kramdown
