--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site settings
 title: xiuc
 email: 972994718@qq.com
-description: > 紫川之神-紫川秀# this means to ignore newlines until "baseurl:"
+description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
@@ -19,3 +19,4 @@ github_username:  froest2012
 
 # Build settings
 markdown: kramdown
+permalink: /blog/:year/:month/:day/:title
