--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ baseurl: ""                             # for example, '/blog' if your blog host
 # SNS settings
 RSS: false
 weibo_username:     
-zhihu_username:     秀川
+zhihu_username:     xiuc001
 github_username:    froest2012
 #twitter_username:  xiuc001
 facebook_username:  
