--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ ga_domain: froest2012.github.io
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "传说中的码畜，大抵是我这个样子"
-sidebar-avatar: /img/avatar-hux.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/xiuc.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
